# TheForge

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  settings.json  test.txt
base/: git.sh  gum.sh  guru.sh
lib/: interactions.sh  utils.sh
modules/drivers/: wayland.sh
modules/drivers/graphics/: init.sh  intel.sh
modules/pkgs/apps/: blueman.sh  dbeaver.sh  docker.sh  emacs.sh  firefox.sh  ghostty.sh  jupyter.sh  kitty.sh  maim.sh  nix.sh  nvim.sh  obsidian.sh  vscodium.sh  webull.sh  yazi.sh  zathura.sh  zen.sh  zotero.sh
modules/pkgs/cli/: bat.sh  bc.sh  bottom.sh  carapace.sh  carnage.sh  cava.sh  chafa.sh  ddgr.sh  dua-cli.sh  exiftool.sh  eza.sh  fastfetch.sh  fd.sh  figlet.sh  file.sh  ftp.sh  fzf.sh  gowall.sh  httrack.sh  isync.sh  jiq.sh  jless.sh  jq.sh  lazydocker.sh  lesspipe.sh  lm-sensors.sh  lshw.sh  matugen.sh  msmtp.sh  mu.sh  netcat.sh  ripgrep.sh  smartmontools.sh  tealdeer.sh  tmux.sh  unzip.sh  wikiman.sh
modules/pkgs/cursors/: bibata.sh
modules/pkgs/de/: ags.sh  awww.sh  cosmic.sh  end-4.sh  gnome.sh  grim.sh  gtk.sh  hypridle.sh  hyprlock.sh  hyprpaper.sh  hyprpicker.sh  hyprsunset.sh  libnotify.sh  nemo.sh  plasma.sh  quickshell.sh  rofi.sh  satty.sh  sddm.sh  slurp.sh  swaync.sh  waybar.sh  wl-clipboard.sh  (+2 more)
tests/: test_script.py  test_settings_form.py
tests/scripts/: editor_save.py
theforge/: main.py  test.json
theforge/pages/: base.py  misc.py  settings.py
theforge/screens/: home.py  misc.py  settings.py
theforge/styles/: main.tcss
theforge/widgets/: base.py  settings.py
widgets/: base.py
(+121 files in other folders)
