[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "TheForge"
version = "0.1.0"
description = "A installation and configuration tui for Gentoo Linux written in python"
authors = [
  { name = "paradoxical-dev", email = "jaredonnell21@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "npyscreen==4.10.5"
]

[project.scripts]
forge-tui = "theforge.main:main"
